# portmaster-launcher-pack

./: .gitignore  Cargo.toml  LICENSE  README.md
.scratch/self-contained-port-app-manager/issues/: 01-app-owned-bootstrap-boundary.md  02-self-contained-aarch64-package.md  03-portmaster-health-startup-gate.md  04-enhanced-installer-happy-path.md  05-transactional-install-pending-validation.md  06-proxy-repair-flow.md  07-next-launch-validation-rollback.md  08-device-risk-gates.md  09-fork-release-candidate-validation.md  10-stable-follow-release.md  11-healthy-environment-update-ux.md  12-remove-legacy-bootstrap-certify-release.md
_kit/: README.md  appmanager_native_revision.py  assemble.sh  build_appmanager_love_lite.sh  build_appmanager_native.sh  build_portkit.sh  build_portkit_launcher.sh  cargo_revision.py  dist_port.sh  dist_trimui_app.sh  github_proxy.sh  launcher_artwork.sh  launcher_base.gd  launcher_unity_common.sh  love_lite_revision.py  pck_builder.py  port_json.py  portable_tools.sh  portkit-launcher-revision.txt  portkit-revision.txt  portkit_launcher_revision.py  portkit_revision.py  portmaster_bootstrap.sh  portmaster_common.sh  stage_portkit.sh  stage_portkit_launcher.sh  trimui_app.py
_kit/fonts/: subset_launcher_font.py
_kit/love/: README.md  conf.lua  kit.lua  launcher.lua  ui.gptk
_kit/runtime/: portkit-launcher.aarch64  portkit.aarch64
config/: README.md  appmanager-config.schema.json  config.json  platform-detail.schema.json
config/scripts/: generate.py  validate.py
config/src/: 00-contract.json  10-environment-adapters.json
config/tests/: test_config_contract.py
crates/appmanager-cli/: Cargo.toml
crates/appmanager-cli/src/: bin.rs  launcher.rs  main.rs
crates/appmanager-core/: Cargo.toml
crates/appmanager-core/src/: artifact.rs  cache.rs  context.rs  device.rs  installer.rs  inventory.rs  lib.rs  operations.rs  path.rs  plan.rs  resolution.rs  runtime.rs  task.rs
crates/appmanager-service/: Cargo.toml
crates/appmanager-service/src/: launcher.rs  lib.rs  resolution.rs
crates/love-lite/: Cargo.toml  README.md  UPSTREAM.md
crates/love-lite/demo/: main.lua
crates/love-lite/device/miniloong/: LOVE-lite.sh
crates/love-lite/src/: gpu.rs  lib.rs  main.rs
crates/love-lite/tests/: runtime_contract.rs
crates/portkit-cli/: Cargo.toml
crates/portkit-cli/src/: bin.rs  font.rs  main.rs
crates/portkit-cli/tests/: config_cli.rs  env_exec.rs  github_cli.rs  health_cli.rs
crates/portkit-core/: Cargo.toml
crates/portkit-core/src/: config.rs  environment.rs  error.rs  file.rs  github.rs  health.rs  lib.rs  platform.rs  predicate.rs  refresh.rs  source.rs
crates/portkit-core/tests/: config_contract.rs
crates/portkit-launcher/: Cargo.toml
crates/portkit-launcher/src/: artwork.rs  atomic.rs  bin.rs  font.rs  json.rs  lib.rs  runtime.rs  sync.rs  unity.rs
crates/portkit-launcher/tests/: cli.rs  config_edits.rs
ports/appmanager/: LICENSE  README.md  SMOKE_TEST.md  love-lite-revision.txt  manifest.json  native-revision.txt
ports/appmanager/love/: app_environment.lua  app_model.lua  app_native.lua  app_operations.lua  app_pages.lua  json.lua  main.lua  runtime_catalog.tsv  scan.lua  ui.gptk
ports/appmanager/portable/licenses/: LICENSE-libtheora-BSD-3-Clause.txt  LICENSE-love-lite-APACHE-2.0.txt  THIRD-PARTY-SOURCES.md
ports/appmanager/portable/runtime/: love.aarch64
ports/appmanager/src/: app_ui.gd  appmanager.gptk  appmanager_sources.sh  bootstrap.tscn  launcher.sh  manifest.bootstrap.json  project.godot  scan.gd
ports/appmanager/src/scripts/: fetch_runtime.sh
ports/appmanager/tests/: test_appmanager_apply_flow.sh  test_scan.lua
ports/batomon/: LICENSE  README.md  manifest.json
ports/batomon/src/: gamedata-README.md  launcher-offline.sh  launcher.sh
ports/batomon/src/godotsteam-stub/: README.md  SConstruct  generate-bindings.py
ports/heishenhua/: LICENSE  README.md  launcher.sh  launcher_ui.gd  manifest.bootstrap.json  manifest.json  project.godot
ports/heishenhua/love/: heishenhua.gptk  launcher.sh.template  main.lua
ports/heishenhua/src/: launcher.sh  launcher_ui.gd  manifest.bootstrap.json
ports/hk/: README.md  hollowknight.gptk  launcher.sh  launcher_ui.gd  manifest.json
ports/hk/love/: launcher.sh.template  main.lua  ui.gptk
ports/hk/src/: bootstrap.tscn  launcher.sh  launcher_ui.gd  project.godot
ports/sts2/: .gitignore  LICENSE  README.md  manifest.json
ports/sts2/linux/: launcher_ui.gd
ports/sts2/love/: launcher.sh.template  main.lua
ports/terraria/: LICENSE  manifest.json
ports/terraria/love/: launcher.sh.template  main.lua
ports/terraria/patch/: patch.bash
ports/terraria/src/: launcher.sh  launcher_ui.gd  manifest.bootstrap.json  project.godot  terraria.gptk
ports/terraria/tests/: test_terraria_launcher_language.sh
ports/vampiresurvivors114/: LICENSE  README.md  launcher.sh  manifest.bootstrap.json  manifest.json
ports/vampiresurvivors114/love/: conf.lua  launcher.sh.template  main.lua
ports/vampiresurvivors114/src/: launcher.sh  launcher_ui.gd  project.godot  vs114_language.sh
tests/: test_appmanager_device_config_refresh.sh  test_appmanager_device_gates.sh  test_appmanager_environment_ui.py  test_appmanager_inprocess_bridge.sh  test_appmanager_native_fail_closed.sh  test_appmanager_native_inventory.sh  test_appmanager_native_packaging.sh  test_appmanager_native_profile.sh  test_appmanager_pending_validation.sh  test_appmanager_portable_package.sh  test_appmanager_portmaster_repair.sh  test_appmanager_sources.sh  test_appmanager_thin_launcher.sh  test_appmanager_ui_runtime_scope.sh  test_batomon_launcher.sh  test_github_proxy_library.sh  test_launcher_contact.sh  test_love_font_resolution.sh  test_love_launcher_contract.sh  test_love_lua_modules.py  test_love_shared_components.sh  test_port_licenses.sh  test_port_screenshots.sh  test_portable_tools.sh  test_portkit_launcher_tools.sh  test_portkit_portable_tools.sh  test_portmaster_bootstrap.sh  test_shell_config_layout_alignment.sh  test_trimui_app_packager.sh  test_vampiresurvivors114_launcher.sh
(+28 files in other folders)
