[workspace]
members = ["crates/*"]
exclude = [
    "crates/love-lite/vendor/love-api",
    "crates/love-lite/vendor/sprite-to-text",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
