[package]
name = "appmanager-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Machine-readable native business helper for Port App Manager"

[dependencies]
appmanager-core = { path = "../appmanager-core" }
clap = { version = "4", features = ["derive"] }
portkit-core = { path = "../portkit-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
