[package]
name = "appmanager-cli"
autobins = false
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Machine-readable native business helper for Port App Manager"

[lib]
path = "src/main.rs"

[[bin]]
name = "appmanager-cli"
path = "src/bin.rs"

[dependencies]
appmanager-core = { path = "../appmanager-core" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
portkit-core = { path = "../portkit-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
