[package]
name = "appmanager-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Safe, app-specific core types for Port App Manager"

[dependencies]
md5 = "0.7"
portkit-core = { path = "../portkit-core" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror = "2"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
