[package]
name = "appmanager-service"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "In-process native service for Port App Manager"

[dependencies]
appmanager-core = { path = "../appmanager-core" }
libc = "0.2"
portkit-core = { path = "../portkit-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
