[package]
name = "portkit-cli"
autobins = false
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/main.rs"

[[bin]]
name = "portkit"
path = "src/bin.rs"

[dependencies]
portkit-core = { path = "../portkit-core" }
serde.workspace = true
serde_json.workspace = true
