[package]
name = "portkit-cli"
autobins = false
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/main.rs"

[[bin]]
name = "portkit"
path = "src/bin.rs"

[dependencies]
lzma-rust2 = { version = "0.17", default-features = false, features = ["std", "xz"] }
portkit-core = { path = "../portkit-core" }
serde.workspace = true
serde_json.workspace = true
tar = { version = "0.4", default-features = false }
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
lzma-rust2 = { version = "0.17", default-features = false, features = ["std", "xz", "encoder"] }
tempfile = "3"
