[package]
name = "portkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2"
md5 = "0.7"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
ureq = { version = "3", features = ["rustls"] }
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
